# cashflow

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-15-plan-1-foundation.md  2026-03-15-plan-2-categorization.md  2026-03-15-plan-3-amazon-reconciliation.md  2026-03-16-plan-3b-bofa-parsers.md  2026-03-16-plan-4-dashboard.md
docs/superpowers/specs/: 2026-03-14-cashflow-design.md  2026-03-23-multi-bank-download-orchestration.md
src/cashflow/: categorize.py  cli.py  db.py  dedup_paypal.py  errors.py  models.py  queries.py  reconcile.py  reimburse.py  seed.py  server.py
src/cashflow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/cashflow/parsers/: amazon.py  apple_card.py  bofa_cc.py  bofa_checking.py  capital_one.py  capital_one_csv.py  chase.py  (+4 more)
tests/: conftest.py  test_amazon_parser.py  test_apple_card_parser.py  test_bofa_cc_parser.py  test_bofa_checking_parser.py  test_capital_one_csv_parser.py  test_capital_one_parser.py  test_categorize.py  test_chase_parser.py  test_citi_parser.py  test_cli.py  test_db.py  test_e2e.py  test_error_handling.py  test_expense_report.py  test_income.py  test_ingest.py  test_paypal_parser.py  test_queries.py  test_reconcile.py  test_review.py  test_seed.py  test_server.py  test_target_parser.py
tests/fixtures/: amazon_orders_sample.txt  apple_card_sample.csv  bofa_cc_sample.csv  bofa_checking_sample.csv  capital_one_csv_sample.csv  capital_one_sample.txt  chase_sample.csv  citi_sample.txt  expense_report_sample.xlsx  paypal_sample.csv  target_sample.csv
(+3 files in other folders)
