[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cashflow"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "anthropic>=0.40",
    "fastapi>=0.115",
    "uvicorn>=0.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.scripts]
cashflow = "cashflow.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
